<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Dashboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#219658"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="BUYER REQUEST LIST "
            android:textColor="#020202"
            android:textSize="30dp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTopic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="10dp"
            android:text="@string/txtTopic"
            android:textColor="#000"
            android:textSize="25dp"
            android:textStyle="bold" />

        <EditText

            android:id="@+id/inputTopic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="35dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Grocery Items" />

        <TextView
            android:id="@+id/txtDescriptoin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="30dp"
            android:text="Descriptoin"
            android:textColor="#000"
            android:textSize="25dp"
            android:textStyle="bold" />

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="35dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="For Business" />

        <TextView
            android:id="@+id/txtPriceRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="30dp"
            android:text="@string/txtPriceRange"
            android:textColor="#000"
            android:textSize="25dp"
            android:textStyle="bold" />

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="35dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="50$-200$" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="30dp"
            android:background="@color/upt_btn"
            android:text="@string/btnUpdate"
            android:textColor="#fff" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignBaseline="@id/btnUpdate"
            android:layout_alignEnd="@id/btnUpdate"
            android:layout_marginEnd="-214dp"
            android:background="@color/dlt_btn"
            android:text="@string/btnDelete"
            android:textColor="#fff" />

        <Button
            android:id="@+id/btnDone"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_below="@id/btnUpdate"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/done_btn"
            android:text="@string/btnDone" />

    </RelativeLayout>

</LinearLayout>
